--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/avneetgill246/fantex-admin/issues"
   },
-  "homepage": "https://github.com/avneetgill246/fantex-admin#readme"
+  "homepage": "https://github.com/avneetgill246/fantex-admin#readme",
+  "dependencies": {
+    "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "fpl-api": "^2.2.0",
+    "nodemon": "^2.0.4"
+  }
 }
