--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "fpl-api": "^2.2.0",
+    "mongoose": "^5.10.2",
     "nodemon": "^2.0.4"
   }
 }
